--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ POSTGRES_USER=user
 POSTGRES_PASSWORD=123qwe
 POSTGRES_SERVER=localhost
 POSTGRES_PORT=5432
-POSTGRES_DB=fastapi_db
+POSTGRES_DB=postgres
 PGADMIN_DEFAULT_EMAIL=test@fastapi.com
 PGADMIN_DEFAULT_PASSWORD=123qwe
