fix docker-compose.yaml for database and pgadmin Setting alembic ini for local use Create first migration

--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 SERVER_HOST=localhost
 POSTGRES_USER=user
 POSTGRES_PASSWORD=123qwe
-POSTGRES_SERVER=localhost
+POSTGRES_SERVER_DOCKER=172.26.0.2
+POSTGRES_SERVER_LOCALHOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=postgres
 PGADMIN_DEFAULT_EMAIL=test@fastapi.com
