--- a/alembic.ini
+++ b/alembic.ini
@@ -56,7 +56,8 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # output_encoding = utf-8
 
 #sqlalchemy.url = driver://user:pass@{localhost}/dbname
-sqlalchemy.url = postgresql://user:123qwe@127.0.0.1:5432/postgres
+# ip address docker container
+sqlalchemy.url = postgresql://user:123qwe@172.26.0.2:5432/postgres
 
 
 
