--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,6 @@ services:
     env_file:
       - ".env"
     restart: always
-    network_mode: "host"
     container_name: postgres_db_app
     image: postgres
     environment:
@@ -13,18 +12,27 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
       PGDATA: /postgres/data/
-      POSTGRES_INITDB_ARGS: "-A md5"
-
     ports:
       - "5433:5432"
+    networks:
+      - postgres
 
   pgadmin:
     image: dpage/pgadmin4:latest
+    container_name: pg_admin_fastapi
     restart: always
+    env_file:
+      - ".env"
     environment:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
     ports:
         - "5050:80"
+    networks:
+      - postgres
     depends_on:
       - postgres
+
+networks:
+  postgres:
+    driver: bridge
