--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
-fastapi
-uvicorn
-pydantic
-python-dotenv
-sqlalchemy
+fastapi~=0.92.0
+uvicorn~=0.20.0
+pydantic~=1.10.5
+python-dotenv~=1.0.0
+sqlalchemy[asyncio]
 psycopg2-binary
-alembic
-databases
+alembic~=1.9.4
 databases[postgres]
+asyncpg
+fastapi-users[sqlalchemy]
+psycopg2
+
+starlette~=0.25.0
