--- a/alembic.ini
+++ b/alembic.ini
@@ -55,7 +55,8 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://user:123qwe@172.26.0.2/postgres
+sqlalchemy.url = postgresql+asyncpg://%(POSTGRES_USER)s:%(POSTGRES_PASSWORD)s@%{POSTGRES_SERVER_DOCKER)s:%(POSTGRES_PORT)s/%(POSTGRES_DB)s
+
 
 
 [post_write_hooks]
