--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ POSTGRES_PORT=5432
 POSTGRES_DB=postgres
 PGADMIN_DEFAULT_EMAIL=test@fastapi.com
 PGADMIN_DEFAULT_PASSWORD=123qwe
-SECRET_KEy=test
+SECRET_KEY=test
